--- a/app/src/main/res/layout/activity_crear_nuevo_ti.xml
+++ b/app/src/main/res/layout/activity_crear_nuevo_ti.xml
@@ -62,9 +62,10 @@
             android:padding="16dp">
 
             <TextView
+                android:id="@+id/ticketCounterTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Ticket-C051"
+                android:text="Ticket-C000"
                 android:textStyle="bold"
                 android:gravity="center"
                 android:textSize="16sp"
@@ -74,25 +75,25 @@
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="31dp"
+                android:layout_marginBottom="10dp"
                 android:text="Seleccione el Problema"
-                android:textSize="14sp"
-                android:layout_marginBottom="10dp"/>
+                android:textSize="14sp" />
 
             <Spinner
                 android:id="@+id/problemSpinner"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="6dp"
+                android:layout_height="50dp"
+                android:layout_marginBottom="16dp"
                 android:background="@drawable/bordes"
-                android:layout_marginBottom="16dp"/>
+                android:padding="6dp" />
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="34dp"
+                android:layout_marginBottom="12dp"
                 android:text="Detalle el Problema"
-                android:textSize="14sp"
-                android:layout_marginBottom="12dp"/>
+                android:textSize="14sp" />
 
             <EditText
                 android:id="@+id/problemDetailEditText"
@@ -114,50 +115,56 @@
             <Spinner
                 android:id="@+id/areaSpinner"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="6dp"
+                android:layout_height="48dp"
+                android:layout_marginBottom="20dp"
                 android:background="@drawable/bordes"
-                android:layout_marginBottom="20dp"/>
+                android:padding="6dp" />
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="33dp"
+                android:layout_marginBottom="8dp"
                 android:text="Adjunte una fotografía de la falla"
-                android:textSize="14sp"
-                android:layout_marginBottom="8dp"/>
-
-
+                android:textSize="14sp" />
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="wrap_content"
                 android:padding="6dp">
                 <Button
-                    android:id="@+id/SeleccionarArch"
+                    android:id="@+id/selectImageButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Seleccionar Archivo"
+                    android:text="Seleccionar Imagen"
                     android:textSize="14sp"
                     android:layout_marginEnd="10dp"
                     android:background="@drawable/boton_tiket"
                     android:layout_marginBottom="8dp"/>
                 <TextView
+                    android:id="@+id/selectedImageNameTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="10dp"
-                    android:layout_toEndOf="@id/SeleccionarArch"
-                    android:text="Ningún archivo seleccionado"
+                    android:layout_toEndOf="@id/selectImageButton"
+                    android:text="Ninguna imagen seleccionada"
                     android:gravity="center"
                     android:textSize="14sp" />
-
             </RelativeLayout>
+
+            <ImageView
+                android:id="@+id/selectedImageView"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:scaleType="centerCrop"
+                android:visibility="gone"
+                android:layout_marginBottom="16dp"/>
 
             <Button
                 android:id="@+id/sendTicketButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="ENVIAR TICKET"
                 android:background="@drawable/boton_tiket"
+                android:text="ENVIAR TICKET"
                 android:textColor="@android:color/white" />
 
         </LinearLayout>
