--- a/app/src/main/res/layout/activity_gestion_solicitudes.xml
+++ b/app/src/main/res/layout/activity_gestion_solicitudes.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Admin.GestionSolicitudesActivity">
+
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
@@ -23,8 +24,33 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
+        android:visibility="visible"
         app:layout_constraintTop_toBottomOf="@id/tvTitle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="@id/recyclerViewSolicitudes"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/tvNoSolicitudes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No hay solicitudes pendientes"
+        android:textSize="16sp"
+        android:visibility="gone"
+        android:drawablePadding="8dp"
+        app:layout_constraintTop_toTopOf="@id/recyclerViewSolicitudes"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
