--- a/app/src/main/res/layout/activity_inicio_user.xml
+++ b/app/src/main/res/layout/activity_inicio_user.xml
@@ -1,131 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#f5f5f5"
+    xmlns:tools="http://schemas.android.com/tools"
     tools:context=".Inicio_User.Inicio_User">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="411dp"
-        android:layout_height="139dp"
+    <LinearLayout
+        android:id="@+id/topBar"
+        android:layout_width="410dp"
+        android:layout_height="76dp"
         android:background="#068f41"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
-
-    </androidx.appcompat.widget.Toolbar>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:orientation="horizontal"
+        android:padding="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.003"
+        tools:layout_editor_absoluteX="1dp">
 
         <ImageView
             android:id="@+id/imageView3"
-            android:layout_width="54dp"
-            android:layout_height="54dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="32dp"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:padding="8dp"
-            android:scaleType="centerInside"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:src="@drawable/menu"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:tint="#ddf0e5" />
+            android:tint="#FFFFFF" />
 
-        <EditText
-            android:id="@+id/editTextText2"
+        <View
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/busqueda"
-            android:ems="10"
-            android:inputType="text"
-            android:padding="8dp"
-            android:text="Buscar"
-            android:textAlignment="center"
-            android:textColor="#0B0B0B"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
-            app:layout_constraintEnd_toStartOf="@+id/imageView4"
-            app:layout_constraintStart_toEndOf="@+id/imageView3"
-            app:layout_constraintTop_toTopOf="@+id/imageView3" />
+            android:layout_height="0dp"
+            android:layout_weight="1" />
 
         <ImageView
             android:id="@+id/imageView4"
-            android:layout_width="54dp"
-            android:layout_height="54dp"
-            android:layout_marginEnd="8dp"
-            android:padding="8dp"
-            app:tint="#ddf0e5"
-            app:layout_constraintBottom_toBottomOf="@+id/editTextText2"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/editTextText2"
-            app:srcCompat="@drawable/cmapana" />
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/notifiacion"
+            android:tint="#FFFFFF" />
+    </LinearLayout>
 
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Recientes"
-            android:textAlignment="textStart"
-            android:textColor="@android:color/white"
-            android:textSize="22sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextText2" />
+    <EditText
+        android:id="@+id/editTextText2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:background="@android:drawable/editbox_background"
+        android:hint="Buscar tickets..."
+        android:padding="12dp"
+        app:layout_constraintTop_toBottomOf="@id/topBar" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
-            android:clipToPadding="false"
-            android:paddingStart="24dp"
-            android:paddingEnd="24dp"
-            app:layout_constraintBottom_toTopOf="@+id/crear"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView5"
-            app:layout_constraintVertical_bias="1.0" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        android:clipToPadding="false"
+        android:padding="8dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@id/crear"
+        app:layout_constraintTop_toBottomOf="@id/editTextText2" />
 
-        <Button
-            android:id="@+id/crear"
-            android:layout_width="123dp"
-            android:layout_height="49dp"
-            android:layout_marginBottom="24dp"
-            android:backgroundTint="#2196f3"
-            android:paddingStart="32dp"
-            android:paddingEnd="32dp"
-            android:text="Crear"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <ImageView
-            android:id="@+id/imagencrear"
-            android:layout_width="14dp"
-            android:layout_height="13dp"
-            android:tint="#FFFFFF"
-            app:layout_constraintBottom_toBottomOf="@+id/crear"
-            app:layout_constraintTop_toTopOf="@+id/crear"
-            app:layout_constraintVertical_bias="0.485"
-            app:srcCompat="@drawable/imagen_lucho"
-            tools:layout_editor_absoluteX="166dp" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/crear"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:background="@android:color/holo_purple"
+        android:text="Crear Ticket"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
