--- a/app/src/main/res/layout/activity_nuevo_registro.xml
+++ b/app/src/main/res/layout/activity_nuevo_registro.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -11,68 +11,35 @@
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <!-- Primera sección (header) sin cambios -->
+
+            <!-- Sección de formulario -->
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="303dp"
-                android:background="#cfd8dc">
-
-                <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="130dp"
-                    android:layout_height="108dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.498"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.415"
-                    app:srcCompat="@drawable/gata" />
-
-                <TextView
-                    android:id="@+id/textView3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Solicitar Registro De Registro de Usuario"
-                    android:textAlignment="center"
-                    android:textSize="24sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView2"
-                    app:layout_constraintVertical_bias="0.103" />
-
-                <TextView
-                    android:id="@+id/textView4"
-                    android:layout_width="303dp"
-                    android:layout_height="73dp"
-                    android:text="Llene los datos y en un plazo no mayor a 48 horas nos comunicaremos con usted"
-                    android:textAlignment="center"
-                    android:textSize="16sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="1.0" />
+                android:layout_height="223dp"
+                android:background="#cfd8dc"
+                app:layout_constraintTop_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <androidx.appcompat.widget.Toolbar
                     android:id="@+id/toolbar"
-                    android:layout_width="0dp"
-                    android:layout_height="?attr/actionBarSize"
+                    android:layout_width="match_parent"
+                    android:layout_height="56dp"
                     android:background="#068f41"
                     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintHorizontal_bias="0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.0"
                     app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
                     <ImageView
@@ -84,56 +51,98 @@
                         android:rotation="180"
                         android:src="@drawable/right_arrow"
                         android:tint="#FFFFFF"
-                        android:translationX="-30dp"/>
+                        android:translationX="-30dp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:text="Bienvenidos"
+                        android:gravity="center"
                         android:textColor="#FFFFFF"
                         android:textSize="20sp"
                         android:textStyle="bold"
-                        android:translationX="-30dp"/>
+                        android:translationX="-30dp" />
 
                 </androidx.appcompat.widget.Toolbar>
+
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="117dp"
+                    android:layout_height="89dp"
+                    app:layout_constraintBottom_toTopOf="@+id/textView4"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.056"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/toolbar"
+                    app:layout_constraintVertical_bias="0.107"
+                    app:srcCompat="@drawable/gata" />
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="232dp"
+                    android:layout_height="81dp"
+                    android:text="Solicitar Registro Usuario"
+                    android:textAlignment="center"
+                    android:textSize="24sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.152"
+                    app:layout_constraintStart_toEndOf="@+id/imageView2"
+                    app:layout_constraintTop_toBottomOf="@+id/toolbar"
+                    app:layout_constraintVertical_bias="0.225" />
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="334dp"
+                    android:layout_height="48dp"
+                    android:text="Llene los datos y en un plazo no mayor a 48 horas nos comunicaremos con usted"
+                    android:textAlignment="center"
+                    android:textSize="16sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.493"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView3"
+                    app:layout_constraintVertical_bias="0.777" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <!-- Sección de formulario -->
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="16dp"
+                android:layout_height="513dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp">
+                android:layout_marginBottom="16dp"
+                android:orientation="vertical"
+                android:padding="16dp">
 
                 <EditText
                     android:id="@+id/etNombreCompleto"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
-                    android:padding="12dp"
                     android:background="@drawable/rounded_edittext_password_background"
                     android:hint="NOMBRE COMPLETO"
+                    android:padding="12dp"
                     android:textSize="16sp" />
 
                 <EditText
                     android:id="@+id/etEmail"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
-                    android:padding="12dp"
                     android:background="@drawable/rounded_edittext_password_background"
                     android:hint="Email"
                     android:inputType="textEmailAddress"
+                    android:padding="12dp"
                     android:textSize="16sp" />
 
                 <!-- Reemplazado EditText por Spinner para Área -->
                 <Spinner
                     android:id="@+id/spinnerArea"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
                     android:background="@drawable/rounded_edittext_password_background"
                     android:padding="12dp"
@@ -143,21 +152,35 @@
                 <Spinner
                     android:id="@+id/spinnerCargo"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
                     android:background="@drawable/rounded_edittext_password_background"
                     android:padding="12dp"
                     android:popupBackground="#FFFFFF" />
 
+
+                <EditText
+                    android:id="@+id/etOtroCargo"
+                    android:layout_width="match_parent"
+                    android:layout_height="74dp"
+                    android:layout_marginBottom="24dp"
+                    android:background="@drawable/rounded_edittext_password_background"
+                    android:hint="INGRESE EL OTRO CARGO"
+                    android:inputType="text"
+                    android:padding="12dp"
+                    android:textSize="16sp"
+                    android:visibility="gone" />
+
+
                 <EditText
                     android:id="@+id/etNumeroContacto"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="24dp"
-                    android:padding="12dp"
                     android:background="@drawable/rounded_edittext_password_background"
                     android:hint="NUMERO DE CONTACTO"
                     android:inputType="phone"
+                    android:padding="12dp"
                     android:textSize="16sp" />
 
                 <Button
@@ -172,4 +195,4 @@
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
