--- a/app/src/main/res/layout/activity_admin_menu.xml
+++ b/app/src/main/res/layout/activity_admin_menu.xml
@@ -67,11 +67,12 @@
 
         <LinearLayout
             android:id="@+id/linearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="163dp"
+            android:layout_width="412dp"
+            android:layout_height="159dp"
             android:orientation="horizontal"
-            android:padding="20dp"
-            tools:layout_editor_absoluteX="0dp"
+            android:padding="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             tools:layout_editor_absoluteY="71dp">
 
             <androidx.cardview.widget.CardView
@@ -185,13 +186,14 @@
 
         <LinearLayout
             android:id="@+id/linearLayout2"
-            android:layout_width="match_parent"
-            android:layout_height="161dp"
+            android:layout_width="413dp"
+            android:layout_height="150dp"
             android:layout_marginTop="8dp"
             android:orientation="horizontal"
-            android:padding="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-            tools:layout_editor_absoluteX="0dp">
+            android:padding="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="120dp"
