Rediseno Perfil User

--- a/app/src/main/res/layout/activity_admin_menu.xml
+++ b/app/src/main/res/layout/activity_admin_menu.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
+    android:background="#FFFFFF"
     tools:context=".Admin.AdminMenu">
 
 
@@ -62,7 +63,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginTop="29dp"
         android:layout_marginBottom="0dp"
-        android:background="@drawable/adminborder" >
+        android:background="@drawable/adminborder">
 
 
         <LinearLayout
@@ -236,13 +237,33 @@
                 android:layout_marginEnd="8dp"
                 app:cardCornerRadius="10dp">
 
-                <Button
-                    android:id="@+id/btnWorkerManagement"
-                    android:layout_width="107dp"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/admincerrar"
-                    android:text="Gestionar Trabajadores"
-                    android:textSize="12dp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/imagdeVstos"
+                        android:layout_width="46dp"
+                        android:layout_height="53dp"
+                        app:srcCompat="@drawable/agesttraba" />
+
+                    <Button
+                        android:id="@+id/btnWorkerManagement"
+                        android:layout_width="107dp"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/admincerrar"
+                        android:text="Gestionar Personal"
+                        android:textSize="12dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.487"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.808" />
+                </LinearLayout>
+
 
             </androidx.cardview.widget.CardView>
 
@@ -252,34 +273,58 @@
                 android:layout_marginEnd="8dp"
                 app:cardCornerRadius="10dp">
 
-                <Button
-                    android:id="@+id/btnListaUser"
-                    android:layout_width="107dp"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/admincerrar"
-                    android:text="Lista de Usuarios"
-                    android:textSize="12dp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/imagdeVstosxd"
+                        android:layout_width="46dp"
+                        android:layout_height="53dp"
+                        app:srcCompat="@drawable/alistauser" />
+
+                    <Button
+                        android:id="@+id/btnListaUser"
+                        android:layout_width="107dp"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/admincerrar"
+                        android:text="Lista de Usuarios"
+                        android:textSize="12dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.487"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.808" />
+                </LinearLayout>
             </androidx.cardview.widget.CardView>
 
 
         </LinearLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <Button
-        android:id="@+id/btnCerrarSesion"
-        android:layout_width="wrap_content"
-        android:layout_height="38dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_weight="1"
-        android:background="@drawable/admincerrar"
-        android:backgroundTint="#068f41"
-        android:radius="6dp"
-        android:text="Cerrar Sesión"
-        android:textSize="14sp"
-        android:tint="#068f41" />
+        <Button
+            android:id="@+id/btnCerrarSesion"
+            android:layout_width="175dp"
+            android:layout_height="47dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_weight="1"
+            android:background="@drawable/admincerrar"
+            android:backgroundTint="#068f41"
+            android:radius="6dp"
+            android:text="Cerrar Sesión"
+            android:textSize="14sp"
+            android:tint="#068f41"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+            app:layout_constraintVertical_bias="0.369" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </RelativeLayout>
